# sige-celery

./: .gitignore  pyproject.toml
sige_slave/setup/: asgi.py  settings.py  urls.py  wsgi.py
