[tool.poetry]
name = "sige-celery"
version = "0.1.0"
description = ""
authors = ["Flavio Vieira Leao <flavio.vl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
djangorestframework = "^3.14.0"
celery = "^5.2.7"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
